--- a/js5-end-to-end/challenges/js5-1-ip-geolocation/views/partials/styles.ejs
+++ b/js5-end-to-end/challenges/js5-1-ip-geolocation/views/partials/styles.ejs
@@ -3,19 +3,17 @@
         font-family: Helvetica, Arial, sans-serif;
     }
     #main-container {
-        background-color: lightblue;
         display: flex;
         flex-direction: row;
         height: 400px;
     }
     #map-container {
-        background-color: lightgreen;
         height: 100%;
         width: 50%;
     }
     #visitors-container {
-        background-color: lightgrey;
         overflow: auto;
+        padding: 10px;
     }
     #buttons-group {
         display: flex;
