complete challenge solution

--- a/js5-end-to-end/challenges/js5-1-ip-geolocation/views/pages/visitors.ejs
+++ b/js5-end-to-end/challenges/js5-1-ip-geolocation/views/pages/visitors.ejs
@@ -34,7 +34,7 @@
         <!-- Include the 'buttons' partial -->
         <%- include('../partials/buttons'); %>
     </div>
-    <!-- Some <script> for the /visitor and /city/:location page are the same -->
+    <!-- Some <script> for the /visitor and /city/:location page is the same -->
     <%- include('../partials/script'); %>
     <script>
         /* For testing purposes, send a request with a fake IP address */
